# aoc

./: .env.example  README.md  pyproject.toml
2023/: 01.py  02.py  03.py
2024/: 01.py  02.py  03.py  04.py  05.py  06.py
